@@ -82,19 +82,19 @@ class ioWriteWrapper(ioWrapper):
     def __init__(self, _obj, enc = ""):
 #        print "ioWriteWrapper.__init__", _obj
         if type(_obj) == type(''):
-	    print "write io from a string"
-	    self.o = None
-	elif type(_obj) == types.InstanceType:
-	    print "write io from instance of %s" % (_obj.__class__)
-	    ioWrapper.__init__(self, _obj)
-	    self._o = libxml2mod.xmlCreateOutputBuffer(self, enc)
-	else:
-	    file = libxml2mod.outputBufferGetPythonFile(_obj)
-	    if file != None:
-		ioWrapper.__init__(self, file)
-	    else:
-	        ioWrapper.__init__(self, _obj)
-	    self._o = _obj
+            print "write io from a string"
+            self.o = None
+        elif type(_obj) == types.InstanceType:
+            print "write io from instance of %s" % (_obj.__class__)
+            ioWrapper.__init__(self, _obj)
+            self._o = libxml2mod.xmlCreateOutputBuffer(self, enc)
+        else:
+            file = libxml2mod.outputBufferGetPythonFile(_obj)
+            if file != None:
+                ioWrapper.__init__(self, file)
+            else:
+                ioWrapper.__init__(self, _obj)
+            self._o = _obj
 
     def __del__(self):
 #        print "__del__"
